fix: add util, locale, controller, and router

--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
-    "pepesan": "^3.4.2"
+    "pepesan": "^3.4.2",
+    "string-template": "^1.0.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "session/*"
+    ]
   }
 }
